--- a/ts.config.json
+++ b/ts.config.json
@@ -1,23 +1,14 @@
 {
   "compilerOptions": {
-    "lib": ["es6", "es7", "dom"],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
     "jsx": "react",
     "compileOnSave": false,
-    "allowSyntheticDefaultImports": true,
-    "outDir": "dist",
-    "paths": {
-      "app/*": ["./app/*"]
-    }
+    "allowSyntheticDefaultImports": true
   },
-  "files": ["./src/global.d.ts"],
   "include": ["./src/**/*"],
-  "exclude": ["dist", "node_modules"],
-  "awesomeTypescriptLoaderOptions": {
-    "useBabel": true
-  }
+  "exclude": ["node_modules/**/*"]
 }
