--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx webpack serve",
-    "build": "webpack",
+    "dev": "cross-env NODE_ENV=development npx webpack serve --config ./config/webpack.dev.ts",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,11 +19,15 @@
     "@babel/register": "^7.18.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/webpack": "^5.28.0",
     "babel-loader": "^9.1.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "dart-sass": "^1.25.0",
     "file-loader": "^6.2.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "moment": "^2.29.4",
     "postcss-loader": "^7.0.2",
     "postcss-px2rem": "^0.3.0",
@@ -32,11 +36,14 @@
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
     "thread-loader": "^3.0.4",
     "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
