--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
-    "moment": "^2.29.4",
     "postcss-loader": "^7.0.2",
     "postcss-px2rem": "^0.3.0",
     "react": "^18.2.0",
@@ -45,5 +44,8 @@
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.7"
   }
 }
