--- a/package.json
+++ b/package.json
@@ -20,22 +20,26 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/webpack": "^5.28.0",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
+    "compression-webpack-plugin": "^10.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "dart-sass": "^1.25.0",
     "file-loader": "^6.2.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "postcss-import": "^15.1.0",
     "postcss-loader": "^7.0.2",
     "postcss-px2rem": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.6",
     "thread-loader": "^3.0.4",
     "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
@@ -46,6 +50,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/runtime": "^7.21.0",
+    "@babel/runtime-corejs3": "^7.21.0",
     "dayjs": "^1.11.7"
   }
 }
