--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
+    "@tweenjs/tween.js": "^20.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.138.0",
     "@types/webpack": "^5.28.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.2",
     "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
@@ -36,6 +40,7 @@
     "postcss-px2rem": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "speed-measure-webpack-plugin": "^1.5.0",
@@ -50,8 +55,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/core": "^7.21.8",
     "@babel/runtime": "^7.21.0",
     "@babel/runtime-corejs3": "^7.21.0",
-    "dayjs": "^1.11.7"
+    "dayjs": "^1.11.7",
+    "three": "^0.138.3"
   }
 }
